trying to fix text spacing

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ img#photo{
   display: flex;
   background: cadetblue;
   text-align: center;
-  justify-content: space-around;
+  justify-content: center;
   color: rgb(241, 241, 248);
   padding: 5px 0px;
 }
